--- a/css/home.css
+++ b/css/home.css
@@ -348,7 +348,7 @@ padding: 50px;
     font-size: 20px;
 }
 .announce{
-    /* padding: px; */
+    padding:202 px;
     /* width: 100%; */
     font-size: 13px;
 }
