--- a/css/navv.css
+++ b/css/navv.css
@@ -93,6 +93,13 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
+.panier-icon {
+    background: none;
+    display: inline-block;
+    width: 40px; 
+    height: 40px;
+}
+
 @media only screen and (max-width: 1320px) {
     header {
         padding: 0 50px;
