--- a/css/abou.css
+++ b/css/abou.css
@@ -1,14 +1,16 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8d9b27a;
+    background-color: #ffebd249;
     color: #333;
 }
 .container {
-    max-width: 900px;
+    max-width: 1000px;
+    width: 100%;
     margin: 50px auto;
-    background: #fff;
+    background: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -16,6 +18,7 @@ body {
 .header {
     text-align: center;
     margin-bottom: 20px;
+    /* background-color: red    ; */
 }
 .header h1 {
     margin: 0;
@@ -56,7 +59,4 @@ body {
 a {
     color: #FF4500;
     text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
 }
