--- a/css/afficherProduit.css
+++ b/css/afficherProduit.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  /* max-width: 1200; */
   padding: 20px;
 }
 
@@ -37,6 +37,7 @@ form {
   border-radius: 10px;
   padding: 10px 20px;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  cursor: pointer;
 }
 
 .btn:hover {
