--- a/css/contact.css
+++ b/css/contact.css
@@ -2,16 +2,30 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: #ff996e09;
     color: #333;
 }
+.contact-intro {
+    text-align: center; 
+    margin: 0 auto; 
+    max-width: 1000px; 
+    padding-top: 30px;
+  }
+  
+  .contact-intro p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #333;
+  }
+  
 .container {
     max-width: 600px;
     margin: 50px auto;
     background: #fff;
     padding: 20px;
+    /* margin-top: 100px; */
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1);
 }
 .header {
     text-align: center;
