--- a/css/logine.css
+++ b/css/logine.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -8,46 +9,46 @@
 
 html, body {
     height: 100%;
+    width: 100%;
 }
-
-body {
-    display: flex;
+    .fullContainer{
+        height: 100%;
+        display: flex;
     justify-content: center;
     align-items: center;
+    }
+body {
+    
     background-color: rgba(255, 228, 196, 0.15);
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .form {
     width: 100%;
-    max-width: 700px;
+    max-width: 500px;
     padding: 40px;
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(255, 192, 192, 0.371);
 }
 
-.first_row, .second_row, .third_row {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    margin-bottom: 15px;
+
+.title {
+    text-align: center;
+    padding-bottom: 20px;
+    font-size: 1.5rem;
+    color: #333;
 }
-.image{
-    width: 26%;
-    margin-right: 20px;
-    border-radius: 15px;
-}
+
 
 input {
     padding: 12px;
+    margin-top: 20px;
     border-radius: 7px;
     border: 1px solid #ccc;
     transition: border-color 0.3s, box-shadow 0.3s;
     width: 100%;
 }
-
-
 
 input:focus {
     border-color: #ff9d4c;
@@ -55,18 +56,13 @@ input:focus {
     outline: none;
 }
 
-.radio_group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 15px;
-}
 
-.homme, .femme {
+/* .login_row {
     display: flex;
-    align-items: center;
-}
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 15px;
+} */
 
 .checkbox {
     display: flex;
@@ -77,24 +73,17 @@ input:focus {
 
 .checkbox input[type="checkbox"] {
     width: auto;
-
 }
 
-.checkbox .terms {
+.checkbox label {
     font-size: 0.9rem;
     color: #333;
 }
 
+
 .subDiv {
     display: grid;
     place-items: center;
-}
-
-.title {
-    text-align: center;
-    padding-bottom: 20px;
-    font-size: 1.5rem;
-    color: #333;
 }
 
 .submit {
@@ -119,19 +108,29 @@ input:focus {
     transform: translateY(1px);
 }
 
-h5 {
-    text-align: center;
-    margin-top: 20px;
-}
 
-.pEreur{
+.pEreur {
     color: red;
     text-align: center;
     margin-bottom: 20px;
     padding: 10px;
     background-color: rgba(255, 0, 0, 0.099);
     border-radius: 7px;
-    /* width: 50%; */
+}
+
+.success {
+    color: green;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: rgba(0, 255, 0, 0.099);
+    border-radius: 7px;
+}
+
+
+h5 {
+    text-align: center;
+    margin-top: 20px;
 }
 
 h5 a {
@@ -144,25 +143,13 @@ h5 a:hover {
     color: #e88c42;
 }
 
+
 @media (max-width: 768px) {
-    .first_row, .second_row, .third_row {
+    .login_row {
         flex-direction: column;
-    }
-
-
-    input {
-        width: 100%;
     }
 
     .submit {
         width: 100%;
     }
-
-    .radio_group {
-
-        gap: 10px;
-    }
-
-
-
 }
