--- a/css/nav.css
+++ b/css/nav.css
@@ -1,14 +1,17 @@
-*{
+* {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
 }
-body{
-    background-color: #fefefe;
+
+body {
+    /* background-color: #fefefe; */
+    font-family: Arial, sans-serif;
 }
-header{
+
+header {
     width: 100%;
     height: 80px;
     background-color: rgb(255, 255, 255);
@@ -16,91 +19,140 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 0 100px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.logo{
-max-width: 200px;
+
+.logo {
+    max-width: 200px;
 }
-/* .logo a{
-    width: 100px;
-} */
-.logo img{
+
+.logo img {
     width: 102px;
 }
-.painting{
-    display: none;
-}
-.navbar ul{
-    display: flex;
-}
-.navbar ul li .signup{
-    background-color: rgb(64, 64, 64);
-    color: white;
-}
-.login:hover{
-    background-color: rgba(242, 242, 242, 0.153);
 
+.navbar ul {
+    display: flex;
+    align-items: center;
 }
-.navbar ul li a{
+
+.navbar ul li {
+    margin: 0 10px;
+}
+
+.navbar ul li a {
     display: block;
-    color:rgba(0, 0, 0, 0.653);
-    font-size: 20px ;
-    padding: 5px 15px;
-    border-radius: 20px;
-    transition: 0.2s;
+    /* color: rgba(0, 0, 0, 0.653); */
+    font-size: 20px;
+    padding: 6px 15px;
+    border-radius: 15px;
+    transition: 0.3s ease;
     margin: 0 5px;
+    text-transform: capitalize;
 }
-/* .navbar ul li a:hover{
-    color: rgb(0, 0, 0);
-    background-color: rgba(255, 186, 95, 0.096);
-} */
-.navbar ul li a.active{
-    color: rgb(0, 0, 0);
-    background-color: rgba(255, 185, 95, 0.236);
+.black-color{
+    color: black;
 }
-@media only screen and (max-width:1320px){
-    header{
+.navbar ul li a:hover {
+    color: white;
+    background: linear-gradient(90deg, rgba(255, 123, 123, 1) 0%, rgba(255, 88, 88, 1) 100%);
+    box-shadow: 0 4px 8px rgba(255, 88, 88, 0.4);
+    transform: translateY(-2px);
+}
+
+.navbar ul li a.active {
+    color: white;
+    background: linear-gradient(90deg, rgba(255, 185, 95, 1) 0%, rgba(255, 155, 55, 1) 100%);
+    box-shadow: 0 4px 8px rgba(255, 155, 55, 0.4);
+}
+
+.signup {
+    background-color: rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 6px 15px;
+    transition: 0.3s ease;
+}
+
+.signup:hover {
+    background: linear-gradient(90deg, rgba(64, 64, 64, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.login:visited,.panier:visited{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+.login {
+    color: black(0, 0, 0, 0.653);
+    padding: 6px 15px;
+    border-radius: 20px;
+    transition: 0.3s ease;
+}
+
+.login:hover {
+    background: linear-gradient(90deg, rgba(64, 64, 64, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    color: white;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.panier-icon {
+    background: none;
+    display: inline-block;
+    width: 40px; 
+    height: 40px;
+}
+
+@media only screen and (max-width: 1320px) {
+    header {
         padding: 0 50px;
-        /* background-color: red; */
     }
 }
-@media only screen and (max-width:900px){
-.hamburger{
-    display: block;
-    cursor: pointer;
-    
-}
-.hamburger .line{
-    width: 30px;
-    height: 3px;
-    background-color: #000000;
-    margin: 6px 0;
-}
-.navbar{
-    height: 0;
-    position: absolute;
-    top: 80px;
-    left: 0;
-    right: 0;
-    width: 100vw;
-    background-color: rgb(255, 255, 255);
-    transition: 0.5s;
-    overflow: hidden;
 
-}
-.navbar.active{
-    height: 450px;
-}
-.navbar.active ul{
-    opacity: 1;
-}
-.navbar ul{
-    display: block;
-    width: fit-content;
-    margin: 80px auto 0 auto;
-    text-align: center;
-    transform: 0.5s;opacity: 0;
-}
-.navbar ul li a{
-    margin-bottom: 12px;
-}
+@media only screen and (max-width: 900px) {
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger .line {
+        width: 30px;
+        height: 3px;
+        background-color: #000000;
+        margin: 6px 0;
+    }
+
+    .navbar {
+        height: 0;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        background-color: rgb(255, 255, 255);
+        transition: 0.5s;
+        overflow: hidden;
+    }
+
+    .navbar.active {
+        height: 450px;
+    }
+
+    .navbar.active ul {
+        opacity: 1;
+    }
+
+    .navbar ul {
+        display: block;
+        width: fit-content;
+        margin: 80px auto 0 auto;
+        text-align: center;
+        transform: 0.5s;
+        opacity: 0;
+    }
+
+    .navbar ul li a {
+        margin-bottom: 12px;
+    }
 }
