--- a/css/signup.css
+++ b/css/signup.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -10,32 +9,40 @@
 html, body {
     height: 100%;
 }
-
-body {
+.fullContainer{
+    height: 100%;
     display: flex;
+justify-content: center;
+align-items: center;
+}
+body {
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     background-color: rgba(255, 228, 196, 0.15);
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .form {
     width: 100%;
-    max-width: 500px;
+    max-width: 700px;
     padding: 40px;
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(255, 192, 192, 0.371);
 }
 
-
-.title {
-    text-align: center;
-    padding-bottom: 20px;
-    font-size: 1.5rem;
-    color: #333;
+.first_row, .second_row, .third_row {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 15px;
 }
-
+.image{
+    width: 26%;
+    margin-right: 20px;
+    border-radius: 15px;
+}
 
 input {
     padding: 12px;
@@ -45,18 +52,25 @@ input {
     width: 100%;
 }
 
+
+
 input:focus {
     border-color: #ff9d4c;
     box-shadow: 0 0 5px rgba(255, 157, 76, 0.5);
     outline: none;
 }
 
-
-.login_row {
+.radio_group {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
     margin-bottom: 15px;
+}
+
+.homme, .femme {
+    display: flex;
+    align-items: center;
 }
 
 .checkbox {
@@ -68,17 +82,24 @@ input:focus {
 
 .checkbox input[type="checkbox"] {
     width: auto;
+
 }
 
-.checkbox label {
+.checkbox .terms {
     font-size: 0.9rem;
     color: #333;
 }
 
-
 .subDiv {
     display: grid;
     place-items: center;
+}
+
+.title {
+    text-align: center;
+    padding-bottom: 20px;
+    font-size: 1.5rem;
+    color: #333;
 }
 
 .submit {
@@ -103,29 +124,19 @@ input:focus {
     transform: translateY(1px);
 }
 
+h5 {
+    text-align: center;
+    margin-top: 20px;
+}
 
-.pEreur {
+.pEreur{
     color: red;
     text-align: center;
     margin-bottom: 20px;
     padding: 10px;
     background-color: rgba(255, 0, 0, 0.099);
     border-radius: 7px;
-}
-
-.success {
-    color: green;
-    text-align: center;
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: rgba(0, 255, 0, 0.099);
-    border-radius: 7px;
-}
-
-
-h5 {
-    text-align: center;
-    margin-top: 20px;
+    /* width: 50%; */
 }
 
 h5 a {
@@ -138,13 +149,25 @@ h5 a:hover {
     color: #e88c42;
 }
 
-
 @media (max-width: 768px) {
-    .login_row {
+    .first_row, .second_row, .third_row {
         flex-direction: column;
+    }
+
+
+    input {
+        width: 100%;
     }
 
     .submit {
         width: 100%;
     }
+
+    .radio_group {
+
+        gap: 10px;
+    }
+
+
+
 }
