--- a/css/afficherProduit.css
+++ b/css/afficherProduit.css
@@ -7,7 +7,8 @@ body {
 }
 
 .container {
-  /* max-width: 1200; */
+  max-width: 1400px;
+  margin: 50px auto;
   padding: 20px;
 }
 
@@ -49,7 +50,7 @@ form {
 .product-card {
   width: 300px;
   height: 500px;
-  position: relative;
+  /* position: relative; */
   border: 1px solid #ddd;
   border-radius: 12px;
   overflow: hidden;
